--- a/natives/connector/CMakeLists.txt
+++ b/natives/connector/CMakeLists.txt
@@ -38,7 +38,7 @@ include_directories("../fdk-aac/libAACdec/include")
 include_directories("../fdk-aac/libSYS/include")
 include_directories("../vorbis/libvorbis-1.3.5/include")
 include_directories("../vorbis/libogg-1.3.3/include")
-link_directories("../libs/64")
+link_directories("../libs/$ENV{INDENTIFIER}")
 
 if (DEFINED ENV{DIST_DIR})
 	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "$ENV{DIST_DIR}")
