--- a/natives/connector/CMakeLists.txt
+++ b/natives/connector/CMakeLists.txt
@@ -19,7 +19,7 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
 	set(COMPILER_FLAGS_DEBUG "/MTd")
 	set(COMPILER_FLAGS_RELEASE "/Ox /MT")
 else()
-	set(COMPILER_FLAGS "-Wall -Wextra -Werror -Wno-unused-parameter -Wno-unused-function -fvisibility=hidden")
+	set(COMPILER_FLAGS "-std=c99 -Wall -Wextra -Werror -Wno-unused-parameter -Wno-unused-function -fvisibility=hidden")
 	set(COMPILER_FLAGS_DEBUG "-g")
 	set(COMPILER_FLAGS_RELEASE "-O3 -DNDEBUG -s")
 	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--gc-sections -Wl,--exclude-libs,ALL")
@@ -33,10 +33,10 @@ set(CMAKE_CXX_FLAGS_RELEASE "${COMPILER_FLAGS} ${COMPILER_FLAGS_RELEASE}")
 include_directories("$ENV{JAVA_HOME}/include/")
 
 include_directories("${samplerate_SOURCE_DIR}/src")
-include_directories("../opus/opus-1.2.1/include")
+include_directories("../opus/opus-1.3/include")
 include_directories("../fdk-aac/libAACdec/include")
 include_directories("../fdk-aac/libSYS/include")
-include_directories("../vorbis/libvorbis-1.3.5/include")
+include_directories("../vorbis/libvorbis-1.3.6/include")
 include_directories("../vorbis/libogg-1.3.3/include")
 link_directories("../libs/$ENV{INDENTIFIER}")
 
