--- a/natives/build.gradle
+++ b/natives/build.gradle
@@ -178,26 +178,25 @@ def waitForAndCheckSuccess(process, name) {
 //Raspberry Pi autotools cross compile stuff
 def getRpiToolchain() { 
   def toolchainHost = 'arm-linux-gnueabihf'
-  def toolchainPath = System.env['HOME'] + '/raspberrypi/gcc-linaro-7.4.1-2019.02-x86_64_arm-linux-gnueabihf/bin'
 
-  def CPP = "${toolchainPath}/${toolchainHost}-cpp"
-  def CC = "${toolchainPath}/${toolchainHost}-gcc"
-  def CXX = "${toolchainPath}/${toolchainHost}-g++"
-  def LD = "${toolchainPath}/${toolchainHost}-ld"
-  def AS = "${toolchainPath}/${toolchainHost}-as"
-  def AR = "${toolchainPath}/${toolchainHost}-ar"
-  def RANLIB = "${toolchainPath}/${toolchainHost}-ranlib"
+  def CPP = "${RPI_TOOLCHAIN_PATH}/${toolchainHost}-cpp"
+  def CC = "${RPI_TOOLCHAIN_PATH}/${toolchainHost}-gcc"
+  def CXX = "${RPI_TOOLCHAIN_PATH}/${toolchainHost}-g++"
+  def LD = "${RPI_TOOLCHAIN_PATH}/${toolchainHost}-ld"
+  def AS = "${RPI_TOOLCHAIN_PATH}/${toolchainHost}-as"
+  def AR = "${RPI_TOOLCHAIN_PATH}/${toolchainHost}-ar"
+  def RANLIB = "${RPI_TOOLCHAIN_PATH}/${toolchainHost}-ranlib"
 
-  def sysRoot = System.env['HOME'] + '/raspberrypi/rootfs'
-  def CPPFLAGS = "--sysroot=${sysRoot}"
-  def PKG_CONFIG_LIBDIR = "${sysRoot}/usr/lib/arm-linux-gnueabihf/pkgconfig:${sysRoot}/usr/share/pkgconfig"
+  //def sysRoot = System.env['HOME'] + '/raspberrypi/rootfs'
+  def CPPFLAGS = "--sysroot=${RPI_SYSROOT}"
+  def PKG_CONFIG_LIBDIR = "${RPI_SYSROOT}/usr/lib/arm-linux-gnueabihf/pkgconfig:${RPI_SYSROOT}/usr/share/pkgconfig"
   
   return [
     args: ["CPPFLAGS=${CPPFLAGS}", "--host=${toolchainHost}",
-      "PKG_CONFIG_DIR=", "PKG_CONFIG_LIBDIR=${PKG_CONFIG_LIBDIR}", "PKG_CONFIG_SYSROOT=${sysRoot}", 
+      "PKG_CONFIG_DIR=", "PKG_CONFIG_LIBDIR=${PKG_CONFIG_LIBDIR}", "PKG_CONFIG_SYSROOT=${RPI_SYSROOT}", 
       "CPP=${CPP}", "CC=${CC}", "CXX=${CXX}", "LD=${LD}", "AS=${AS}", "AR=${AR}", "RANLIB=${RANLIB}"
       ],
-    flags: " --sysroot=${sysRoot}"
+    flags: " --sysroot=${RPI_SYSROOT}"
   ]
 }
 
