Don't try and get rpi toolchain if not doing a cross compile
This means you don't have to define the  toolchain paths in gradle.properties

--- a/natives/build.gradle
+++ b/natives/build.gradle
@@ -199,8 +199,9 @@ def getRpiToolchain() {
     flags: " --sysroot=${RPI_SYSROOT}"
   ]
 }
-
-def rpiToolchain = getRpiToolchain()
+if (System.env['RPI_CROSS_COMPILE'] != null) {
+  def rpiToolchain = getRpiToolchain()
+}
 //print rpiToolchain.toMapString() + "/n"
 
 def buildOpusOnLinux(force) {
